# bambooapi

./: .gitignore  README.md  main.py  pyproject.toml
bambooapi/: __init__.py
examples/: notes_app.py
