[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo-framework"
version = "0.1.6"
description = "A lightweight, readable Python API framework. Simple by design."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["api", "framework", "asgi", "web", "bamboo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/myaxiomai/bambooapi"
Repository = "https://github.com/myaxiomai/bambooapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["bambooapi*"]
